codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_fresh_session_transitions.snap
---
source: tui/src/startup_draft_tests.rs
expression: "snapshots.join(\"\\n---\\n\")"
---
resume lookup fallback:
before:
  >_ Codex v<VERSION>

  Getting ready…

  Resuming session…




  ╭──────────────────────────────────────────╮
  ┃ › draft while loading                    │
  ╰──────────────────────────────────────────╯







after:
  >_ Codex v<VERSION>

  Getting ready…






  ╭──────────────────────────────────────────╮
  ┃ › draft while loading                    │
  ╰──────────────────────────────────────────╯







---
fork lookup fallback:
before:
  >_ Codex v<VERSION>

  Getting ready…

  Forking session…




  ╭──────────────────────────────────────────╮
  ┃ › draft while loading                    │
  ╰──────────────────────────────────────────╯







after:
  >_ Codex v<VERSION>

  Getting ready…






  ╭──────────────────────────────────────────╮
  ┃ › draft while loading                    │
  ╰──────────────────────────────────────────╯







---
resume picker cancellation:
before:
hidden while picker owns input
after:
  >_ Codex v<VERSION>

  Getting ready…






  ╭──────────────────────────────────────────╮
  ┃ › Type a draft while Codex gets ready…   │
  ╰──────────────────────────────────────────╯
    ? shortcuts






---
fork picker cancellation:
before:
hidden while picker owns input
after:
  >_ Codex v<VERSION>

  Getting ready…






  ╭──────────────────────────────────────────╮
  ┃ › Type a draft while Codex gets ready…   │
  ╰──────────────────────────────────────────╯
    ? shortcuts
