codex-rs/tui/src/snapshots/codex_tui__startup_draft__tests__startup_draft_full_frames.snap
---
source: tui/src/startup_draft_tests.rs
expression: "snapshots.join(\"\\n---\\n\")"
---
empty (48 columns):
  >_ Codex v<VERSION>

  Getting ready…






  ╭──────────────────────────────────────────╮
  ┃ › Type a draft while Codex gets ready…   │
  ╰──────────────────────────────────────────╯
    ? shortcuts






---
resuming (48 columns):
  >_ Codex v<VERSION>

  Getting ready…

  Resuming session…




  ╭──────────────────────────────────────────╮
  ┃ › Type a draft while Codex gets ready…   │
  ╰──────────────────────────────────────────╯
    ? shortcuts






---
forking (48 columns):
  >_ Codex v<VERSION>

  Getting ready…

  Forking session…




  ╭──────────────────────────────────────────╮
  ┃ › draft while loading                    │
  ╰──────────────────────────────────────────╯







---
multiline (48 columns):
  >_ Codex v<VERSION>

  Getting ready…






  ╭──────────────────────────────────────────╮
  ┃ › first startup line                     │
  ┃   second startup line                    │
  ╰──────────────────────────────────────────╯






---
narrow (18 columns):
>_ Codex · loading

Getting ready…






╭────────────────╮
┃ › first        │
┃   startup line │
┃                │
┃   second       │
┃   startup line │
┃                │
╰────────────────╯
